--- a/package.json
+++ b/package.json
@@ -2,29 +2,22 @@
   "name": "@htsoft/aiza-sdk",
   "version": "1.0.2",
   "description": "Aiza GameFi Software Development Kit",
-  "main": "index.js",
+  "private": false,
+  "main": "dist/src/index.js",
+  "typings": "dist/src/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\""
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jack-ht/aiza-sdk.git"
+  "engines": {
+    "node": ">=14"
   },
-  "keywords": [
-    "Aiza",
-    "GameFi",
-    "PlayToEarn",
-    "Defi",
-    "Dapp",
-    "SmartContract",
-    "BlockChain"
-  ],
-  "author": "Jack",
-  "license": "GPL-3.0-or-later",
   "dependencies": {
-    "@htsoft/aiza-schemas": "^1.0.1",
-    "@htsoft/auction-contracts": "^1.0.1",
-    "@htsoft/core-contracts": "^1.0.1",
+    "@htsoft/aiza-schemas": "^1.0.2-0",
+    "@htsoft/auction-contracts": "^1.0.2-0",
+    "@htsoft/core-contracts": "^1.0.2-1",
     "axios": "^0.21.1",
     "eth-sig-util": "^3.0.0",
     "ethereumjs-util": "^7.0.7",
@@ -68,6 +61,21 @@
     "ts-jest": "^26.4.4",
     "typescript": "^4.0.5"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jack-ht/aiza-sdk.git"
+  },
+  "keywords": [
+    "Aiza",
+    "GameFi",
+    "PlayToEarn",
+    "Defi",
+    "Dapp",
+    "SmartContract",
+    "BlockChain"
+  ],
+  "author": "Jack",
+  "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/jack-ht/aiza-sdk/issues"
   },
